--- a/public/global.css
+++ b/public/global.css
@@ -7,6 +7,7 @@ body {
     container-type: inline-size;
     container-name: mobile-subpanel;
     min-width: 0;
+    max-width: 25em;
 }
 
 /* Default to desktop/tablet full controls; container query will override when narrow. */
